--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,9 @@ nav ul li a:hover {
 .contact-form .form-container .form .form-group input:focus, .contact-form .form-container .form .form-group textarea:focus {
   border: 1px solid #222831;
 }
+.contact-form .form-container .form .error-status {
+  text-align: center;
+}
 
 /* Footer */
 .footer {
@@ -551,4 +554,52 @@ nav ul li a:hover {
   color: #fafafa;
   font-size: 1.5rem;
   padding: 0 0.3rem;
+}
+
+/* Error Message Status */
+#status {
+  margin: 1rem 0;
+  padding: 0.5rem;
+}
+
+#status.success {
+  color: green;
+  -webkit-animation: status 4s ease forwards;
+          animation: status 4s ease forwards;
+}
+
+#status.error {
+  color: red;
+  -webkit-animation: status 4s ease forwards;
+          animation: status 4s ease forwards;
+}
+
+@-webkit-keyframes status {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  50% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: all;
+  }
+}
+
+@keyframes status {
+  0% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  50% {
+    opacity: 1;
+    pointer-events: all;
+  }
+  100% {
+    opacity: 0;
+    pointer-events: all;
+  }
 }/*# sourceMappingURL=style.css.map */
